tt-rss.css
/* ... */
#infoBoxShadow {
	background-image : url("images/shadow.png");
	left : 30%;
	top : 30%;
	width : 30%;
	z-index : 3;
	position : absolute;
	display : none;
}

div.infoBoxContents {
	padding : 5px;
	margin-bottom : 5px;
}

div.infoBoxContents td {
	font-size : small;
}

div.helpResponse h1, div.infoBoxContents h1 {
/*        border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #c0c0c0; */
	font-size : 16pt;
}

div.helpResponse h2, div.infoBoxContents h2 {
/*        border-width : 0px 0px 0px 0px; */
	font-size : 12pt;
}

/* pre {
	border : 1px solid #c0c0c0;
	padding : 5px;
	background : #f0f0f0;
	margin : 5px 10px 5px 10px;
} */

pre {
	margin : 5px;
}

input.extSearch {
	width : 100%;
}

table.main td.prefsTabs {
	padding-left : 5px;
/*		  background-image : url("images/toolbar.png");
	background-position : bottom left;
	background-repeat : repeat-x; */
}

input.prefsTab {		
	background-image : url("images/prefs_tab.png");
	background-position : top left;
	background-repeat : repeat-x;
	border : 0px solid black;
	padding : 2px 7px 2px 7px;
	margin : 0px 1px 0px 0px;
	width : 130px;
	font-size : x-small;
	background-color : white;
}

input.prefsTabSelected {

	background-image : url("images/active_tab.png");
	background-position : top left;
	background-repeat : repeat-x;
	border : 0px solid black;
	padding : 2px 7px 2px 7px;
	margin : 0px 1px 0px 0px;
	width : 130px;
	font-weight : bold;
	background-position : top left;
	background-repeat : repeat-x;
	font-size : x-small;
}


/*input.prefsTab:hover {
	background : white;
}*/

div.warning {
	background : #fff7d5;
	border : 1px solid #d7c47a;
	padding : 3px;
	margin : 5px;
	font-size : x-small;
}

div.notice {
	background : #ffffff;
	border : 1px solid #88b0f0;
	padding : 5px;
	margin : 5px;
	font-size : x-small;
}

ul.nomarks {
	list-style-type : none;
	margin : 0px;
	padding : 10px; 
}

div.bigErrorMsg {
	border : 1px solid #c0c0c0;
	background : #fff0f0;
	padding : 30px;
	margin : 20px;
}

div.prefHelp, td.prefHelp {
	font-size : x-small;
	color : gray;
	padding : 5px;
}

td.welcomePrompt {
	font-size : x-small;
	color : #4684ff;
	text-align : right;
	padding-right : 10px;
	padding-top : 5px;
}

td.httpWelcomePrompt {
	font-size : small;
	color : gray;
	text-align : right;
}

table.loginForm {
	background-color : #ecf4ff;
}

table.innerLoginForm {
	border : 1px solid #88b0f0;
	padding : 50px;
	background-color : white;
}

table.innerLoginForm td {
	padding : 3px 3px 5px 3px;
}

span.insensitive {
	color : gray;
}

.prefGenericAddBox {
	margin : 5px;
	font-size : small;
}

.prefGenericAddBox td {
	font-size : small;
}

body.logoutBody {
	background-color : #f0f0f0;
	color : black;
}

span.logoutWarning {
	color : red;
	font-weight : bold;
}

div.logoutContent {
	width : 600px;
	border : 1px solid #c0c0c0;
	background-color : white;
	margin-left : auto;
	margin-right : auto;
	margin-top : 20px;
	padding : 10px;
}

.small {
	font-size : x-small;
}

table.innerFeedTable td {
	margin : 0px;
	padding : 0px;
}

td.selectPrompt {
	font-size : x-small;
	color : gray;
}

table.headlinesSubToolbar td.headlineActions {
	font-size : x-small;
	color : gray;
	padding : 5px 0px 5px 5px;
}

table.headlinesSubToolbar td.headlineActionsRTL {
	font-size : x-small;
	color : gray;
	padding : 5px 5px 5px 0px;
}

table.headlinesSubToolbar td.headlineTitle {
	font-size : x-small;
	color : gray;
	padding : 5px 5px 5px 0px;
	text-align : right;
}

table.headlinesSubToolbar td.headlineTitleRTL {
	font-size : x-small;
	color : gray;
	padding : 5px 0px 5px 5px;
	text-align : left;
}

span.contentPreview {
	font-size : x-small;
	color : gray;
	font-weight : normal;
}

span.contentPreview:hover {
	color : #4684ff;
}

table.headlinesList td.hlMarkedPic {
	width : 25px;
	text-align : center;
}

table.headlinesList td.hlfeed {
	text-align : right;
	font-size : small;
}

td.hlSelectRow, td.hlUpdatePic {
	width : 25px;
	text-align : center;
}

table.headlinesList td.hlUpdated {
	font-size : small;
	color : gray;
	text-align : right;
	width : 100px;
}

table.headlinesList tr td {
	padding : 2px 0px 2px 0px;
}

div.postHeader td.postDate {
	font-size : x-small;
	text-align : right;
	color : gray;
}

div.postHeader td.postDateRTL {
	font-size : x-small;
	text-align : left;
	color : gray;
}

#feedUpdateErrors {
	display : none;
}

#allEntryTags {
	font-size : x-small;
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #c0c0c0;
	padding-bottom : 5px;
	display : none;
}

/*td.hlContent {
	overflow : hidden;
	height : 1em;
	display : block;
} */

td.hlMarkedPic, td.hlSelectRow, td.hlUpdated, td.hlFeed {
	height : 1em;
}

div.cdmArticle {
	border : 1px solid #f0f0f0;
	background-color : #fafafa;
	-moz-border-radius : 5px;
	margin : 10px 10px 0px 10px;
	padding : 10px;
}

div.cdmArticleUnread {
	border : 1px solid #d5f1f4;
	background-color : #fafeff;
	-moz-border-radius : 5px;
	margin : 10px 10px 0px 10px;
	padding : 10px;
}

div.cdmArticleSelected, div.cdmArticleUnreadSelected {
	  -moz-border-radius : 5px;
	margin : 10px 10px 0px 10px;
	padding : 10px;
	background-color : #fff7d5;
		  border : 1px solid #e7d796;
}

div.cdmArticleUnread div.cdmHeader a.title, 
div.cdmArticleUnreadSelected div.cdmHeader a.title {
	font-weight : bold;
}

div.cdmHeader {
	padding-bottom : 5px;
}

div.cdmFooter {
	font-size : x-small;
	color : gray;
	padding-top : 5px;
}

div.cdmFooter input, div.cdmHeader input, div.cdmFooter img {
	margin : 0px;
}

div.cdmHeader, div.cdmHeader a {
	color : gray;
	font-size : x-small;
}

div.cdmHeader a:hover {
	color : #4684ff;
}

div.cdmContent {
	margin-bottom : 5px;
}

a.warning {
	color : #f04040;
}

img.closeButton {
	border-width : 0px;
	float : right;
}

span.groupPrompt {
	font-size : x-small;
	color : #4684ff;
}

ul.userFeedList {
	height : 300px;
	overflow : auto;
	list-style-type : none;
	border : 1px solid #88b0f0;
	background-color : white;
	margin : 0px 0px 5px 0px;
	padding : 0px;
}
/* ... */

